2017.9/_sources/plugins/available/diversity/beta.txt
beta: Beta diversity
====================

.. raw:: html

   <div class="tabbed">
     <ul class="nav nav-tabs">
       <li class="active"><a data-toggle="tab" href="#cli">Command line interface</a></li>
       <li><a data-toggle="tab" href="#api">Artifact API</a></li>
     </ul>
     <div class="tab-content">
       <div id="cli" class="tab-pane fade in active">
         <pre>Usage: qiime diversity beta [OPTIONS]

     Computes a user-specified beta diversity metric for all pairs of samples
     in a feature table.

   Options:
     --i-table PATH                  Artifact: FeatureTable[Frequency]
                                     [required]
                                     The feature table containing the
                                     samples over which beta diversity should be
                                     computed.
     --p-metric [cosine|correlation|braycurtis|dice|sqeuclidean|cityblock|rogerstanimoto|sokalsneath|wminkowski|seuclidean|yule|mahalanobis|chebyshev|euclidean|matching|hamming|sokalmichener|russellrao|kulsinski|jaccard|canberra]
                                     [required]
                                     The beta diversity metric to be
                                     computed.
     --p-n-jobs INTEGER              [default: 1]
                                     The number of jobs to use for
                                     the computation. This works by breaking down
                                     the pairwise matrix into n_jobs even slices
                                     and computing them in parallel. If -1 all
                                     CPUs are used. If 1 is given, no parallel
                                     computing code is used at all, which is
                                     useful for debugging. For n_jobs below -1,
                                     (n_cpus + 1 + n_jobs) are used. Thus for
                                     n_jobs = -2, all CPUs but one are used.
                                     (Description from
                                     sklearn.metrics.pairwise_distances)
     --o-distance-matrix PATH        Artifact: DistanceMatrix [required if not
                                     passing --output-dir]
                                     The resulting distance
                                     matrix.
     --output-dir DIRECTORY          Output unspecified results to a directory
     --cmd-config PATH               Use config file for command options
     --verbose                       Display verbose output to stdout and/or
                                     stderr during execution of this action.
                                     [default: False]
     --quiet                         Silence output if execution is successful
                                     (silence is golden).  [default: False]
     --help                          Show this message and exit.</pre>
       </div>
       <div id="api" class="tab-pane fade">
         <pre>Beta diversity

   Computes a user-specified beta diversity metric for all pairs of samples in
   a feature table.

   Parameters
   ----------
   table : FeatureTable[Frequency]
       The feature table containing the samples over which beta diversity
       should be computed.
   metric : Str % Choices({'braycurtis', 'canberra', 'chebyshev', 'cityblock', 'correlation', 'cosine', 'dice', 'euclidean', 'hamming', 'jaccard', 'kulsinski', 'mahalanobis', 'matching', 'rogerstanimoto', 'russellrao', 'seuclidean', 'sokalmichener', 'sokalsneath', 'sqeuclidean', 'wminkowski', 'yule'})
       The beta diversity metric to be computed.
   n_jobs : Int, optional
       The number of jobs to use for the computation. This works by breaking
       down the pairwise matrix into n_jobs even slices and computing them in
       parallel. If -1 all CPUs are used. If 1 is given, no parallel computing
       code is used at all, which is useful for debugging. For n_jobs below
       -1, (n_cpus + 1 + n_jobs) are used. Thus for n_jobs = -2, all CPUs but
       one are used. (Description from sklearn.metrics.pairwise_distances)

   Returns
   -------
   distance_matrix : DistanceMatrix
       The resulting distance matrix.</pre>
       </div>
     </div>
   </div>